fixed header on smaller screens

--- a/client/src/components/header.css
+++ b/client/src/components/header.css
@@ -25,3 +25,18 @@
   text-decoration: none;
   color: var(--main-color);
 }
+
+@media screen and (max-width: 1025px) {
+  .header {
+    flex-direction: column;
+    height: 150px;
+  }
+  .header h1 {
+    margin-top: 20px;
+  }
+  .header a {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+  
+}
