--- a/client/src/pages/static.css
+++ b/client/src/pages/static.css
@@ -34,6 +34,7 @@
     .main {
         align-items: center;
         flex-direction: column;
+        margin-bottom: 100px;
     }
     .main div {
         width: 80%;
